# oneshot-cadical

./: CMakeLists.txt  Clause.cpp  Clause.h  Node.cpp  Node.h  SolverThread.cpp  SolverThread.h  Tree.cpp  Tree.h  cadical.hpp  main.cpp  params.cpp  params.h  visualize-log.sh
tests/: CMakeLists.txt  assume.cpp
